<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_book_cover"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/img_book_cover" />

    <TextView
        android:id="@+id/tv_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_toEndOf="@+id/img_book_cover"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tv_book_title"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_book_title"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/img_book_cover"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tv_book_author"
        android:textSize="15sp" />
</RelativeLayout>